2015-02-07 Roman
- DAQ.OPC_UA: OpcUa_BadMessageNotAvailable service error is added and used for service "RepublishRequest".


2015-02-06 Roman
- DB: LibsDB.vcaBase.db: Main.{grpGraph,grpGraph10}: Adapted for Logical scale control for individual parameters to Diagram type "XY" specific.
    Model.{AGLKS,Boiler}: Control panel's copy for graphs Main.grph_panel some fixed into the project.


2015-02-05 Roman
- DB: LibsDB.vcaBase.db: Control panel for graphs Main.grph_panel expanded for XY type select allow and the scaling by X allow.
- DAQ.OPC_UA: Addition debug messages is added to service TranslateBrowsePathsToNodeIdsRequest.
- UI.VCAEngine.Diagram: Cursor attributes "curSek", "curUSek", "curColor" set allowed for all types.
    Attribute "sclHor" set to generic for all types.
- UI.{Vision,WebVision}.Diagram: Attribute "prm{N}val" set to curent value for type XY is added.
    Also set "curSek" and "curUSek" to curent value time.
- FIX:UI.WebVision: Resource lock replaced to mutex and some potential bugs fixed.


2015-01-31 Roman
- !!!!:UI.{VCAEngine,Vision,WebVision}: Type "XY" to primitive "Diagram" support is added, by Y into unpair and X into pair parameters.
- FIX:UI.Vision: Double free by later restoring user and the password after changing user to unalowed for reading user for the project's session.


2015-01-28 Roman
- FIX:UI.{Vision,WebVision}: For primitive "Diagram" expanded address variant "data:{XMLNodeData}" for allow pass "tm", "tm_grnd" and
	possibility set in seconds by attribute 's'.
    Assign loaded values but not the append to the values buffer for direct address variants "line:{value}" and "data:{XMLNodeData}" is fixed.


2015-01-27 Roman
- !!!!:FIX:SYS: For prevent race condition the functions preEnable(), postEnable(), preDisable() and postDisable() sets to lock free.
    Disabled nodes allowed to list also as checking for present.
    Flags MkDisable, Disable, MkEnable, Enable renamed to DoDisable, Disabled, DoEnable, Enabled.